--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/darby-dev/steam-tracker#readme",
   "dependencies": {
     "discord-webhook-node": "^1.1.8",
+    "dotenv": "^16.0.0",
     "nedb": "^1.8.0",
     "request": "^2.88.2"
   }
